fixing z-index for nav

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -69,6 +69,10 @@ body.images-index {
   background-color: white;
 }
 
+body.images-map {
+  background-color: white;
+}
+
 .nav-sign {
   padding-top: 20px;
 }
@@ -125,7 +129,7 @@ html, body {
 }
 
 .h1-paralax-hide{
-  display: none;
+  visibility:hidden
 }
 
 .h3-paralax{
@@ -432,7 +436,7 @@ label {
 
 .comment-container {
   height: 200px;
-  width: 157px;
+  width: 167px;
   box-shadow: 0 1px 10px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
   overflow: auto;
   padding: 15px 15px 2px;
@@ -532,7 +536,7 @@ a {
   // justify-content: space-around; its help when you need space around your content
   align-items: center;
   padding-left: 20px;
-  z-index: 1;
+  z-index: 9999999;
 }
 
 
@@ -928,12 +932,38 @@ iframe {
   }
 
   .h1-paralax-hide {
-    display:block;
-    color: red;
-    top: 50%;
-    left: 32%;
-
+    visibility:visible;
+    // text orentation to vertcal
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    color: white;
+    font-family: 'raisonne', sans-serif;
+    font-size: 60px;
   }
+
+  .paralx-content-container-vertical{
+    width: 100px;
+    height: 500px;
+    z-index: 1000000;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    padding-left: 0;
+  }
+
+
+  .paralx-content-container-right{
+    width: 350px;
+    height: 300px;
+    z-index: 1000000;
+    position: absolute;
+    top: 40%;
+    left: 20%;
+  }
+
+
+
+
 
   .h3-paralax{
     color:#fff;
@@ -947,9 +977,12 @@ iframe {
     height: 300px;
     z-index: 1000000;
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 20%;
   }
+
+
+
 
 
    .p-paralax {
@@ -966,13 +999,7 @@ iframe {
 
    }
 
-  div.vertical-line {
-    width: 80px;
-    height: 120px;
-    border-right: 1px solid red;
-    position: absolute;
-    top: 680px;
-  }
+
 
   h5{
     color: red;
